<resources>
    <string name="app_name">MallApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_main">Главная</string>
    <string name="drawer_item_login">Войти</string>
    <string name="drawer_item_register">Регистрация</string>
    <string name="drawer_item_logout">Выйти</string>
    <string name="drawer_item_my_shops">Мои магазины</string>
    <string name="drawer_item_like">Избранные</string>
    <string name="drawer_item_about">О приложении</string>
    <string name="drawer_item_feedback">Обратная связь</string>
    <string name="select">Выбрать</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="welcome">GCM Greeting App</string>

    <string name="hint_email">Ваш e-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_name">Имя</string>
    <string name="hint_phone">Телефон</string>
    <string name="btn_login">ВОЙТИ</string>
    <string name="btn_register">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="btn_link_to_register">Зарегистрироваться</string>
    <string name="title_activity_manage_shop">ManageShopActivity</string>
    <string name="title_activity_add_shop">AddShopActivity</string>

    <string name="shop_title">Название магазина</string>
    <string name="shop_number">Номер магазина</string>
    <string name="shop_main_phone">Главный телефон</string>
    <string name="shop_phone">Телефон</string>
    <string name="shop_extra_phone">Второй телефон</string>
    <string name="shop_site">Сайт</string>
    <string name="shop_description">Описание</string>
    <string name="shop_mall">Выберите центра</string>
    <string name="shop_mall_name">Торговый центр</string>
    <string name="shop_category">Выберите категорию</string>
    <string name="shop_category_name">Категория</string>
    <string name="shop_add_message">Добавить</string>
    <string name="shop_edit_message">Редактировать</string>
    <string name="title_activity_edit_shop">EditShopActivity</string>
    <string name="title_activity_manage_goods">""</string>
    <string name="manage_shop_detail_display">показать/скрыть информацию</string>

    <string name="error_empty_title">Название не может пустым</string>
    <string name="error_empty_description">добавьте описание магазина</string>
    <string name="error_empty_category">Пожалуйста, выберите категорию</string>
    <string name="error_count_selected_category">Не можете выбрать больше 3 категории</string>
    <string name="error_empty_mall">Пожалуйста, выберите центру</string>
    <string name="error_empty_phone">Главный телефон не может пустым</string>
    <string name="title_activity_mall_map">На карте</string>
    <string name="put_route">Проложить маршрут</string>
    <string name="GPSAlertDialogTitle">GPS настройка</string>
    <string name="GPSAlertDialogMessage">GPS не включен. Вы хотите перейти к меню настройки?</string>
    <string name="settings">Да</string>
    <string name="cancel">Отмена</string>
    <string name="display_on_map">на карте</string>
    <string name="str_rb_normal">Обычный</string>
    <string name="str_rb_satellite">Спутник</string>
    <string name="str_rb_terrain">Гибридный</string>

    <string name="goods_name">Название товара</string>
    <string name="goods_price">Цена</string>
    <string name="goods_description">Описание</string>
    <string name="goods_add">Добавить</string>
    <string name="goods_edit">Редактировать</string>
    <string name="goods_add_photos">Выбрать из галереи</string>
    <string name="goods_add_photos_ok">Ок</string>
</resources>
