<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    tools:context="kz.itdamu.mallapp.activity.AddGoodsActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/toolbar">



        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ViewSwitcher
                android:id="@+id/viewSwitcher"
                android:layout_width="fill_parent"
                android:layout_height="110dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" >

                <GridView
                    android:id="@+id/gridGallery"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginBottom="-10dp"
                    android:layout_marginLeft="-10dp"
                    android:layout_marginRight="-10dp"
                    android:layout_marginTop="-10dp"
                    android:horizontalSpacing="-15dp"
                    android:numColumns="3"
                    android:padding="0dp"
                    android:verticalSpacing="-15dp"
                    tools:listitem="@layout/photos_add_item"
                    >
                </GridView>

                <ImageView
                    android:id="@+id/imgSinglePick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/no_media" />
            </ViewSwitcher>
            <Button
                android:id="@+id/btnPhotosPickMul"
                style="@style/btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="8dp"
                android:background="@color/theme_primary"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:text="@string/goods_add_photos" />

            <android.support.design.widget.TextInputLayout

                android:id="@+id/goods_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp">
                <EditText
                    android:id="@+id/goods_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/goods_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp">
                <EditText
                    android:id="@+id/goods_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/goods_price" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/goods_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp">
                <EditText
                    android:id="@+id/goods_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/goods_description" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goods_add"
                android:id="@+id/btnAddGoods"
                android:layout_below="@+id/selectCategoryName"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="8dp"
                android:background="@color/theme_primary"
                android:textColor="@color/white"
                android:layout_marginTop="15dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
