<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="kz.itdamu.mallapp.activity.ManageGoodsActivity"
    android:background="#ffffffff">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_shop_detail_display"
        android:layout_below="@+id/toolbar"
        android:id="@+id/controlShopDisplay"
        android:textColor="@color/grey_700"
        android:textSize="14sp"
        android:gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/shop_card_view"
        android:layout_below="@+id/controlShopDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground"
        fab:cardElevation="2sp"
        android:clickable="false"
        fab:cardUseCompatPadding="true"
        fab:contentPadding="5dp"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp">
                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_description"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/shop_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_number"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/shop_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_phone"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/shop_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>
                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_site"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/shop_site"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>
                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_category_name"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/shop_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>
                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_mall_name"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/shop_mall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>



    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/ic_plus"
        fab:fab_colorNormal="@color/theme_primary"
        fab:fab_colorPressed="@color/theme_primary_dark"
        fab:fab_colorRipple="@color/ripple"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />

</RelativeLayout>
